kubernetes/load-balancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello
spec:
  ports:
  # Port is the network load balancer port to handle user requests.
  - port: 80
    name: plaintext
    # Container port the application listens on.
    targetPort: 80
  # Selector labels used in a pod template when creating a Deployment object.
  selector:
    app: hello
  type: LoadBalancer
